--- a/app/src/main/res/layout/fragment_select_gender.xml
+++ b/app/src/main/res/layout/fragment_select_gender.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginTop="@dimen/space_50"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
