--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -162,6 +162,27 @@
             android:textSize="@dimen/size_20"
             app:fontFamily="@font/lato" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/space_60"
+            android:background="@color/dark_t" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvLanguage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_30"
+            android:drawableStart="@drawable/ic_language"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:fontFamily="@font/lato"
+            android:gravity="center"
+            android:paddingVertical="@dimen/space_15"
+            android:text="@string/language"
+            android:textColor="@color/white"
+            android:textSize="@dimen/size_20"
+            app:fontFamily="@font/lato" />
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
