--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,5 @@
     <dimen name="size_15">15sp</dimen>
     <dimen name="space_40">40dp</dimen>
     <dimen name="space_0">0dp</dimen>
+    <dimen name="space_5">5dp</dimen>
 </resources>
