--- a/app/src/main/res/layout/model_trainings.xml
+++ b/app/src/main/res/layout/model_trainings.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/space_10"
     android:layout_margin="@dimen/space_5"
-    android:backgroundTint="#20E3CF">
+    android:backgroundTint="#20E3CF"
+    app:cardCornerRadius="@dimen/space_10">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardViewTrainings"
@@ -15,7 +15,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottieRecycler"
@@ -42,6 +41,5 @@
             app:layout_constraintTop_toBottomOf="@+id/lottieRecycler" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.cardview.widget.CardView>
